--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -2,15 +2,15 @@
 * [一、开始启程—你的第一行Android代码](#一开始启程你的第一行android代码)
 * [二、先从看得到的入手—探究活动](#二先从看得到的入手探究活动)
 * [三、数据存储全方案——详解持久化技术](#三数据存储全方案详解持久化技术)
-* [四、跨程序共享数据——探究内容提供器](#四跨程序共享数据内容提供器)
-* [五、丰富你的程序——运用手机多媒体](八丰富你的程序——运用手机多媒体)
-* [六、看看精彩的世界——使用网络技术](九看看精彩的世界——使用网络技术)
-* [七、后台默默的劳动者——探究服务](十、后台默默的劳动者——探究服务)
-* [八、Android特色开发——基于位置的服务](十一Android特色开发——基于位置的服务)
-* [九、最佳的UI体验——MaterialDesign实战](#十二最佳的UI体验——MaterialDesign实战)
-* [十、继续进阶——你还应该掌握的高级技巧](十三继续进阶——你还应该掌握的高级技巧)
-* [十一、进入实战——开发酷欧天气](十四进入实战——开发酷欧天气)
-* [十二、最后一步——将应用发布到360应用商店](十五最后一步——将应用发布到360应用商店)
+* [四、跨程序共享数据——探究内容提供器](#四跨程序共享数据探究内容提供器)
+* [五、丰富你的程序——运用手机多媒体](#五丰富你的程序运用手机多媒体)
+* [六、看看精彩的世界——使用网络技术](#六看看精彩的世界使用网络技术)
+* [七、后台默默的劳动者——探究服务](#七后台默默的劳动者探究服务)
+* [八、Android特色开发——基于位置的服务](#八android特色开发基于位置的服务)
+* [九、最佳的UI体验——MaterialDesign实战](#九最佳的ui体验materialdesign实战)
+* [十、继续进阶——你还应该掌握的高级技巧](#十继续进阶你还应该掌握的高级技巧)
+* [十一、进入实战——开发酷欧天气](#十一进入实战开发酷欧天气)
+* [十二、最后一步——将应用发布到360应用商店](#十二最后一步将应用发布到360应用商店)
 * [参考资料](#参考资料)
 <!-- GFM-TOC -->
 
@@ -490,7 +490,7 @@ Windows系统：打开Git Bash
     git add .
     git commit -m "First commit"
     
-# 三、数据存储全方案——详解持久化技术
+## 三、数据存储全方案——详解持久化技术
 
 ### 将数据存储到文件中
 
@@ -722,4 +722,949 @@ Android 6.0以上权限分为普通权限和危险权限。危险权限共9组24
                 break;
         }
     }
+    
+### 内容URI对象定义
+
+    Uri uri = Uri.parse("content://com.example.app.provider/table1")；
+    //结尾的1为id
+    Uri uri = Uri.parse("content://com.example.app.provider/table1/1")；
+    //使用通配符
+    Uri uri = Uri.parse("content://com.example.app.provider/*");
+    Uri uri = Uri.parse("content://com.example.app.provider/table1/#");
+    
+### 自定义ContentProvider要注意的地方
+    
+#### 使用UriMatcher匹配内容URI的功能。
+
+    public static final int TABLE1_DIR = 0;
+    
+    public static final int TABLE1_ITEM = 1;
+    
+    public static final int TABLE2_DIR = 2;
+    
+    public static final int TABLE2_ITEM = 3;
+    
+    private static UriMatcher uirMatcher；
+    
+    static {
+        uriMatcher = new UriMatcher（UriMatcher.NO_MATCH);
+        //addURI接收3个参数，authority、path、自定义代码
+        uriMatcher.addURI("com.example.app.provider", "table1", TABLE_DIR);
+        uriMatcher.addURI("com.example.app.provider", "table1/#", TABLE1_ITEM);
+        uriMatcher.addURI("com.example.app.provider", "table2/#", TABLE2_ITEM);
+    }
+    
+    @Override
+    public Cursor query(Uri uri, String[] projection, String selection, String[] selectionArgs, String sortOrder) {
+        switch (uriMatcher.match(uri)) {
+            case TABLE1_DIR:
+                //查询table1表中的所有数据
+                break;
+            case TABLE1_ITEM:
+                //查询table1表中的单条数据
+                break;
+            case TABLE2_DIR:
+                //查询table2表中的所有数据
+                break;
+            case TABLE2_ITME:
+                //查询table2表中的单条数据
+                break;
+            default:
+                break;
+        }
+    }
+    
+#### getType()方法用于获取Uri对象所对应的MIME类型。一个内容URI由3部分组成：
+
+- 必须以vnd开头
+- 如果内容URI以路径结尾，则后接android.cursor.dir/, 如果内容URI以id结尾，则后接android.cursor.item/。
+- 最后接上vnd.<authority>.<path>。
+
+    @Override
+    public String getType(Uri uri) {
+        switch (uriMatcher.match(uri)) {
+            case TABLE1_DIR:
+                return "vnd.android.cursor.dir/vnd.com.example.app.provider.table1";
+            case TABLE1_ITEM:
+                return "vnd.android.cursor.item/vnd.com.example.app.provider.table1";
+            case TABLE2_DIR:
+                return "vnd.android.cursor.dir/vnd.com.example.app.provider.table2";
+            case TABLE2_ITEM:
+                return "vnd.android.cursor.item/vnd.com.example.app.provider.table2";
+            default:
+                break;
+        }
+        return null;
+    }
+    
+#### 注意在清单文件注册
+
+    <provider
+        android:name=".DatabaseProvider"
+        android:authorities="com.example.databasetest.provider"
+        android:enabled="true"
+        android:exported="true">
+        
+## Git命令
+
+查看文件修改情况
+
+    git status
+
+查看更改内容
+
+    git diff
+    
+撤销未add之前的修改
+
+    git checkout 文件
+    
+对于add后的文件，先取消添加，再撤回提交。
+
+    //取消添加使用reset
+    git reset HEAD 文件
+    
+查看历史提交信息
+
+    git log
+    
+查看指定提交记录的一行记录
+
+    git log 记录id -1
+    //查看具体修改了什么内容
+    git log 记录id -1 -p
+    
+# 五、丰富你的程序——运用手机多媒体
+
+## 通知的进阶技巧
+
+### 在通知播放的时候播放一段音频
+
+    setSound(Uri.fromFile(new File("/system/media/audio/ringtones/luna.ogg")））
+    
+### 设置手机静止和震动的时长
+
+它是一个长整型的数组，以毫秒为单位。
+    
+    //立即振动1秒，然后静止1秒，再振动1秒
+    setVibrate(new long[] {0, 1000, 1000, 1000})
+    
+控制手机振动需要声明权限
+
+    <users-permission android:name="android.permission.VIBRATE" />
+    
+### 实现LED灯不停闪烁的效果
+
+    //颜色，LED灯亮起的时长，LED灯暗去的时长，均以毫秒为单位
+    setLights(Color.GREEN, 1000, 1000)
+
+### 使用默认设置实现上述效果
+
+    setDefaults(NotificationCompat.DEFAULT_ALL)
+    
+### 构建出丰富的通知效果
+
+    setStyle()
+    setPriority()
+
+#### 设置长文本的通知内容
+
+    .setStyle(new NotificationCompat.BigTextStyle().bigText("Learn how to build notifications, send and sync data, and use voice action. Get the official Android IDE and developer tools to build apps for Android"))
+    
+#### 显示大图片
+
+    .setStyle(new NotificaitonCompat.BigPictureStyle().bigPicture(BitmapFactory.decodeResource(getResources(), R.drawable.big_image)))
+    
+#### 设置通知的重要程度
+
+- PRIORITY_DEFAULT表示默认的重要程度，和不设置效果是一样的
+- PRIORITY_MIN表示最低的重要程度，系统可能只会在特定的场景才会显示这条通知，比如用户下拉状态栏的时候
+- PRIORITY_LOW表示较低的重要程度，系统可能会将这类通知缩小，或改变其显示的顺序，将其排在更重要的通知之后
+- PRIORITY_HIGH表示较高的重要程度，系统可能会将这类通知放大，或改变其显示的顺序，将其排在比较靠前的位置
+- PRIORITY_MAX表示最高的重要程度，这类通知消息必须要让用户立刻看到，甚至需要用户做出响应操作
+
+    setPriority(NotificationCompat.PRIORITY_MAX)
+    
+## 使用摄像头和相册
+
+### 调用摄像头拍照
+
+    public void onClick(View v) {
+        //创建File对象，用于存储拍照后的图片, getExternalCacheDir()获取的是SDK卡中专门用于存放当前应用缓存数据的位置：/sdcard/Android/data/<package name>/cache
+        File outputImage = new File(getExternalCacheDir(), "output_image.jpg");
+        try {
+            if (outputImage.exists()) {
+                outputImage.delete();
+            }
+            outputImage.createNewFile();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        if (Build.VERSION.SDK_INT >= 24) {
+            //从Android 7.0系统开始，直接使用本地真实路径的Uri被认为是不安全的，会抛出FileUriExposedException异常。目的：它使用了和内容提供器类似的机制来对数据进行保护，可以选择性地将封装过的Uri共享给外部，提高了应用的安全性
+            imageUri = FileProvider.getUriForFile(MainActivity.this, "com.exmaple.cameraalbumtest.fileprovider", outputImage);
+        } else {
+            imageUri = Uri.fromFile(outputImage);
+        }
+        //启动相机程序
+        Intent intent = new Intent("android.media.action.IMAGE_CAPTURE");
+        intent.putExtra(MediaStore.EXTRA_OUTPUT, imageUri);
+        startActivityForResult(intent, TAKE_PHOTO);
+    }
+    
+    @Override
+    protected void onActivityResult(int requestCode, int resultCode, Intent data) {
+        switch (requestCode) {
+            case TAKE_PHOTO:
+                if (resultCode == RESULT_OK) {
+                    try {
+                        //将拍摄的照片显示出来
+                        Bitmap bitmap = BitmapFactory.decodeStream(getContentResolver().openInputStream(imageUri));
+                        picture.setImageBitmap(bitmap);
+                    } catch (FileNotFoundException e) {
+                        e.printStackTrace();
+                    }
+                }
+                break;
+            default:
+                break;
+        }
+    }
+    
+清单文件中注册FileProvider
+
+    <provider
+        android:name="android.support.v4.content.FileProvider"
+        android:authorities="com.example.cameraalbumtest.fileprovider"
+        android:exported="false"
+        android:grantUriPermissions="true">
+        //指定共享路径
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/file_paths" />
+    </provider>
+    
+    <paths xmlns:android="http://schemas.android.com/apk/res/android">
+        //设置空值表示将整个SK卡进行共享
+        <external-path name="my_iamges" path="" />
+    </paths>
+    
+    //兼容4.4之前需声明权限
+    <user-permission android:name="android.permission.WRITE_EXTERNAL_STOREAGE" />
+    
+### 从相册中选中照片
+
+    public static final int CHOOSE_PHOTO = 2;
+    
+    Button chooseFromAlbum = (Button) findViewById(R.id.choose_from_album);
+    chooseFromAlbum.setOnClickListener(new View.OnClickListener() {
+        @Override
+        public void onClick(View v) {
+            if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.WRITE_EXTERNAL_STORAGE) != PackageManagaer.PERMISSION_GRANTED) {
+                ActvitiyCompat.requestPermissions(MainActivity.this, new String[]{Manifest.permission.WRATE_EXTERNAL_STORAGE}, 1);
+            } else {
+                openAlbum();
+            }
+        }
+    }
+    
+    private void openAlbum() {
+        Intent intent = new Intent("android.intent.action.GET_CONTENT");
+        intent.setType("image/*");
+        startActivityForResult(intent, CHOOSE_PHOTO);//打开相册
+    }
+    
+    @Override
+    public void onRequestPermissionsResult(int requestCode, String[] permissions, int[] grantResults) {
+        switch (requestCode) {
+            case 1:
+                if (grantResults.length > 0 && grantResults[0] == PackageManager.PERMISSION_GRANTED) {
+                    openAlbum();
+                } else {
+                    Toast.makeText(this, "You denied the permission", Toast.LENGTH_SHORT).show();
+                }
+                break;
+            default:
+                break;
+        }
+    }
+    
+    @Override
+    protected void onActivityResult(int requestCode, int resultCode, Intent data) {
+        switch (requestCode) {
+            case CHOOSE_PHOTO:
+                if (resultCode == RESULT_OK) {
+                    //判断手机系统版本号
+                    if (Build.VERSION.SDK_INT >= 19) {
+                        //Android系统从4.4版本开始，选取相册中的图片不在返回图片的真实Uri了，则是一个封装过的Uri，需要对不同类型的Uri进行解析
+                        handleImageOnKitKat(data);
+                    } else {
+                        handleImageBeforeKitKat(data);
+                    }
+                }
+                break;
+            default:
+                break;
+        }
+    }
+    
+    @TargetApi(19)
+    private void handleImageOnKitKat(Intent data) {
+        String iamgePath = null;
+        Uri uri = data.getData();
+        if (DocumentContract.isDocumentUri(this, uri)) {
+            //如果是document类型的Uri，则通过document id处理
+            String docId = DocumentsContract.getDocumentId(uri);
+            if("com.android.providers.media.documents".equals(uri.getAuthority())) {
+                String id = docId.split(":")[1]; //解析出数字格式的id
+                String selection = MediaStore.Images.Media._ID + "=" + id;
+                imagePath = getImagePath(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, selection);
+            } else if ("com.android.providers.downloads.documents".equals(uri.getAuthority())) {
+                Uri contentUri = CotnentUris.withAppendedid(Uri.parse("content://downloads/public_downloads"), Long.valuesOf(docId));
+                imagePath = getImagePath(contentUri, null);
+            }
+        } else if ("content".equalsIgnoreCase(uri.getScheme())) {
+            //如果是content类型的Uri，则使用普通方式处理
+            imagePath = getImagePath(uri, null);
+        } else if ("file".equalsIgnoreCase(uri.getScheme())) {
+            //如果是file类型的Uri，直接获取图片路径即可
+            imagePath = uri.getPath();
+        }
+        displayImage(imagePath); //根据图片路径显示图片
+    }
+    
+    private void handleImageBeforeKitKat(Intent data) {
+        Uri uri = data.getData();
+        String imagePath = getImagePath(uri, null);
+        displayImage(imagePath);
+    }
+    
+    private String getImagePath(Uri uri, String selection) {
+        String path = null;
+        // 通过Uri和selection来获取真实的图片路径
+        Cursor cursor = getContentResolver().query(uri, null, selection, null, null);
+        if (cursor != null) {
+            if (cursor.moveToFirst()) {
+                path = cursor.getString(cursor.getColumnIndex(MediaStore.Images.Media.DATA));
+            }
+            cursor.close();
+        }
+        return path;
+    }
+    
+    private void displayImage(String imagePath) {
+        if (imagePath != null) {
+            Bitmap bitmap = BitmapFactory.decodeFile(imagePath);
+            picture.setImageBitmap(bitmap);
+        } else {
+            Toast.makeText(this, "failed to get image", Toast.LENGTH_SHORT).show();
+        }
+    }
+    
+## 六、看看精彩的世界——使用网络技术
+
+### WebView
+
+    
+    //当需要从一个网页跳转到另一个网页时，我们希望目标网页仍然在当前WebView中显示，而不是打开系统浏览器
+    webView.setWebViewClient(new WebViewClient());
+    
+### 使用HTTP协议访问网络
+
+POST请求：
+
+    connection.setRequestMethod("POST");
+    DataOutputStream out = new DataOutputStream(connection.getOutputStream());
+    out.writeBytes("username=admin&password=123456");
+    
+### 解析JSON格式数据
+
+    //解析Json数组
+    List<Person> people = gson.fromJson(jsonData, new TypeToken<List<Person>>(){}.getType());
+    
+### 解析异步消息处理机制
+
+![image](https://upload-images.jianshu.io/upload_images/5329299-2456777f5517768d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/682)
+
+## 七、后台默默的劳动者——探究服务
+
+### 服务的最佳实践——完整版的下载实例
+
+    public interface DownloadListener {
+        
+        void onProgress(int progress);
+        
+        void onSuccess();
+        
+        void onFailed();
+        
+        void onPaused();
+        
+        void onCanceled();
+
+    }
+    
+    public class DownloadTask extends AsyncTask<String, Integer, Integer> {
+        public static final int TYPE_SUCCESS = 0;
+        public static final int TYPE_FAILED = 1;
+        public static final int TYPE_PAUSED = 2;
+        public static final int TYPE_CANCELED = 3;
+        
+        private DownloadListener listener;
+        
+        private boolean isCanceled = false;
+        
+        private boolean isPaused = false;
+        
+        private int lastProgress;
+        
+        public DownloadTask(DownloadListener listener) {
+            this.listener = listener;
+        }
+        
+        @Override
+        protected Integer doInBackground(String... params) {
+            InputStream is = null;
+            RandomAccessFile savedFile = null;
+            File file = null;
+            try {
+                long downloadedLength = 0;//记载已下载的文件长度
+                String downloadUrl = params[0];
+                String fileName = Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_DOWNLOADS).getPath();
+                file = new File(directory + fileName);
+                if (file.exists()) {
+                    downloadedLength = file.length();
+                }
+                long contentLength = getContentLength(downloadUrl);
+                if (contentLength == 0) {
+                    return TYPE_FAILED;
+                } else if (contentLength == downloadedLength) {
+                    //已下载字节和文件总字节相等，说明下载完成了
+                    return TYPE_SUCCESS;
+                }
+                OkHttpClient client = new OkHttpClent();
+                Request request = new Request.Builder()
+                        //断点下载，指定从哪个字节开始下载
+                        .addHeader("RANGE"， "bytes=" + downloadedLength + "-")
+                        .url(downloadUrl)
+                        .build();
+                Response response = client.newCall(request).execute();
+                if (response != null) {
+                    is = responsel.body().byteStream();
+                    savedFile = new RandomAccessFile(file, "rw");
+                    savedFile.seek(downloadedLength);//跳过已下载的字节
+                    byte[] b = new byte[1024];
+                    int total = 0;
+                    int len;
+                    while ((len = is.read(b)) != -1) {
+                        if (isCanceled) {
+                            return TYPE_CANCELED;
+                        } else if(isPaused) {
+                            return TYPE_PAUSED;
+                        } else {
+                            total += len;
+                            savedFile.write(b, 0, len);
+                            //计算已下载的百分比
+                            int progress = (int) ((total + downloadedLength) * 100 / contentLength);
+                            publishProgress(progress);
+                        }
+                    }
+                    response.body().close();
+                    return TYPE_SUCCESS;
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            } finally {
+                try {
+                    if (is != null) {
+                        is.close();
+                    }
+                    if (savedFile != null) {
+                        savedFile.close();
+                    }
+                    if (isCanceled && file != null) {
+                        file.delete();
+                    }
+                } catch (Exception e) {
+                    e.printStackTrace();
+                }
+            }
+            return TYPE_FAILED;
+        }
+        
+        @Override
+        protected void onProgressUpdate(Integer... values) {
+            int progress = values[0];
+            if (progress > lastProgress) {
+                listener.onProgress(progress);
+                lastProgress = progress;
+            }
+        }
+        
+        @Override
+        protected void onPostExecute(Integer status) {
+            switch (status) {
+                case TYPE_SUCCESS:
+                    listener.onSuccess();
+                    break;
+                case TYPE_FAILED:
+                    listener.onFailed();
+                    break;
+                case TYPE_PAUSED:
+                    listener.onPaused();
+                    break
+                case TYPE_CANCELED:
+                    listener.onCanceled();
+                    break
+                default:
+                    break;
+            }
+        }
+        
+        public void pauseDownload() {
+            isPaused = true;
+        }
+        
+        public void cancelDownload() {
+            isCanceled = true;
+        }
+        
+        private long getContentLength(String downloadUrl) throws IOException {
+            OkHttpClient client = new OkHttpClient()
+            Request request = new Request.Builder()
+                    .url(downloadUrl)
+                    .build();
+            Response response = client.newCall(request).execute();
+            if (reponse != null && response.isSuccessful()) {
+                long contentLength = response.body().contentLength();
+                response.close();
+                return contentLength;
+            }
+            return 0;
+        }
+    }
+    
+    public class DownloadService extends Service {
+        
+        private DownloadTask downloadTask;
+        
+        private String downloadUrl;
+        
+        private DownloadListener listener = new DownloadListener() {
+            @Override
+            public void onProgress(int progress) {
+                getNotificationManager().notify(1, getNotification("Downloading...", progress));
+            }
+            
+            @Override
+            public void onSuccess() {
+                downloadTask = null;
+                //下载成功时将前台服务通知关闭，并创建一个下载成功的通知
+                stopForeground(true);
+                getNotificationManager().notify(1, getNotification("Download Success", -1);
+                Toast.makeText(DownloadService.this, "Download Success", Toast.LENGTH_SHORT).show();
+            }
+            
+            @Override
+            public void onFailed() {
+                downloadTask = null;
+                //下载失败时将前台服务通知关闭，并创建一个下载失败的通知
+                stopForeground(true);
+                getNotificationmanager().notify(1, getNotification("Download Failed", -1));
+                Toast.makeText(DownloadService.this, "Download Failed", Toast.LENGTH_SHORT).show();
+            }
+            
+            @Override
+            public void onPaused() {
+                downloadTask = null;
+                Toast.makeText(DownloadService.this, "Pause", Toast.LENGTH_SHORT).show();
+            }
+            
+            @Override
+            public void onCanceled() {
+                downloadTask = null;
+                stopForeground(true);
+                Toast.makeText(DownloadService.this, "Canceled", Toast.LENGTH_SHORT).show();
+            }
+        };
+        
+        private DownloadBinder mBinder = new DownloadBinder();
+        
+        @Override
+        public IBinder onBind(Intent intent) {
+            return mBinder;
+        }
+        
+        class DownloadBinder extends Binder {
+            
+            public void startDownload(String url) {
+                if (downloadTask == null) {
+                    downloadUrl = null;
+                    downloadTask = new DownloadTask(listener);
+                }
+            }
+            
+            public void pauseDownload() {
+                if (downloadTask != null) {
+                    downloadTask.pauseDownload();
+                }
+            }
+            
+            public void cancelDownload() {
+                if (downloadTask != null) {
+                    downloadTask.cnacelDownload();
+                } else {
+                    if (downloadUrl != null) {
+                        //取消下载时需将文件删除，并将通知关闭
+                        String fileName = downloadUrl.substring(downloadUrl.lastIndexOf("/"));
+                        String directory = Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_DOWNLOADS).getPath();
+                        File file = new File(directory + fileName);
+                        if (file.exists()) {
+                            file.delete();
+                        }
+                        getNotificationManager().cancel(1);
+                        stopForeground(true);
+                        Toast.makeText(DownloadService.this, "Canceled", Toast.LENGTH_SHORT).show();
+                    }
+                }
+            }
+        }
+        
+        private NotificationManager getNotificatinoManager() {
+            return (NotificationMangaer) getSystemService(NOTIFICATION_SERVICE);
+        }
+        
+        private Notification getNotificatino(String title, int progress) {
+            Intent intent = new Intent(this, MainActivity.class);
+            PendingIntent pi = PendingIntent.getActivity(this, 0, intent, 0);
+            NotificationCompat.Builder builder = new NotificationCompat.Builder(this);
+            builder.setSmallIcon(R.mipmap.ic_luncher);
+            builder.setLargeIcon(BitmapFactory.decodeResource(getResources(), R.mipmap.ic_launcher));
+            builder.setContentIntent(pi);
+            builder.setCotentTitle(title);
+            if (progress > 0) {
+                //当progress大于或等于0时才需显示下载进度
+                builder.setContentText(progress + "%");
+                builder.setProgress(100, progress, false);
+            }
+            return builder.build();
+        }
+    }
+    
+    public class MainActivity extends AppCompatActivity implements View.OnClickListener {
+        
+        private DownloadService.DownloadBinder downloadBinder;
+        
+        private ServiceConnection connection = new ServiceConnection() {
+            
+            @Override
+            public void onServiceDisconnected(ComponentName name) {
+                
+            }
+            
+            @Override
+            public void onServiceConnected(ComponentName name, IBinder service) {
+                downloadBinder = (DownloadService.DownloadBinder) service;
+            }
+        };
+        
+        @Override
+        protected void onCreate(Bundle savedInstanceState) {
+            super.onCreate(savedInstanceSate);
+            setContentView(R.layout.activity_main);
+            Button startDownload = (Button) findViewById(R.id.start_download);
+            Button pauseDownload = (Button) findViewById(R.id.pause_download);
+            Button cancelDownload = (Button) findViewById(R.id.cancel_download);
+            startDownload.setOnClickListener(this);
+            pauseDownload.setOnClickListener(this);
+            cancelDownload.setOnClickListener(this);
+            Intent intent = new Intent(this, DownloadService.class);
+            startService(intent); //启动服务
+            bindeService(intent, connection, BIND_AUTO_CREATE); //绑定服务
+            if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.WRITE_EXTERNAL_STORAGE != PackageManager.PERMISSION_GRANTED) {
+                ActivityCompat.requestPermissions(MainActivity.this, new String[]{ Manifest.permission.WRITE_EXTERNAL_STORAGE }， 1);
+            }
+        }
+        
+        @Override
+        public void onClick(View v) {
+            if (downloadBinder == null) {
+                return;
+            }
+            switch (v.getId)) {
+                case R.id.start_download:
+                    String url = "https//raw.githubusercontent.com/guolindev/eclipse/master/eclipse_inst_win64.ext";
+                    downloadBinder.startDownload(url);
+                    break;
+                case R.id.pause_download:
+                    downloadBinder.pauseDownload();
+                    break
+                case R.id.cancel_download:
+                    downloadBinder.cancelDownload();
+                    break
+                default:
+                    break;
+            }
+        }
+        
+        @Override
+        public void onRequestPermissionResult(int requestCode, String[] permissions, int[] grantResults) {
+            switch (requestCode) {
+                case 1:
+                    if(grantResult.length > 0 && grantResult[0] != PackageManager.PERMISSION_GRANTED) {
+                        Toast.makeText(this, "拒绝权限将无法使用程序", Toast.LENGTH_SHORT).show();
+                        finish();
+                    }
+                    break;
+                default:
+                    break;
+            }
+        }
+        
+        @Override
+        protected void onDestroy() {
+            super.onDestroy();
+            unbinderService(connection);
+        }
+        
+    }
+    
+# 八、Android特色开发——基于位置的服务
+
+## 使用百度定位
+
+首先配置清单文件：
+
+    <users-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <users-permission android:name="android.permission.ACCESS_FINE_STATE"/>
+    <users-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <users-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <users-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <users-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <users-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <users-permission android:name="android.permission.INTERNET"/>
+    <users-permission android:name="android.permission.mount_unmount_FILESYSTEMS"/>
+    <users-permission android:name="android.permission.WAKE_LOCK"/>
+    
+    <meta-data
+        android:name="com.baidu.lbsapi.API_KEY"
+        android:value="i6VD2fHKM3msMfZtIOXAhFSzDiYGFIwL" />
+        
+    <service android:name="com.baidu.location.f" android:enabled="true"
+        android:process=":remote">
+    </service>
+    
+    public class MainActivity extends AppCompatActivity {
+        
+        public LocationClient mLocationClient;
+        
+        private TextView positionText;
+        
+        @Override
+        protected void onCreate(Bundle savedInstanceState) {
+            super.onCreate(savedInstanceState);
+            mLocationClient = new LocationClient(getApplicationContext());
+            mLocationClient.registerLocationListener(new MyLocationListener());
+            setContentView(R.layout.activity_main);
+            positionText = (TextView) findViewById(R.id.position_text_view);
+            List<String> permissionList = new ArrayList<>();
+            if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.ACCESS_FINE_LOCATION) != PackageManager.PERMISSION_GRANTED) {
+                permissionList.add(Manifest.permission.ACCESS_FINE_LOCATION);
+            }
+            if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.READ_PHONE_STATE) != PackageManager.PERMISSION_GRANTED) {
+                permissionList.add(Manifest.permission.READ_PHONE_STATE);
+            }
+            if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.WRITE_EXTERNAL_STORATE) != PackageManager.PERMISSION_GRANTED) {
+                permissionList.add(Manifest.permission.WRITE_EXTERNAL_STORAGE);
+            }
+            if (!permissionList.isEmpty()) {
+                String[] permissions = permissionList.toArray(new String[permissionList.size()]);
+                ActivityCompat.requestPermissions(MainActivity.this, permissions, 1);
+            } else {
+                requestLocation();
+            }
+        }
+    
+        private void requestLocation() {
+            mLocationClent.start();
+        }
+    
+        @Override
+        public void onRequestPermissionsResult(int requestCode, String[] permissions, int[] grantResults) {
+            switch (requestCode) {
+                case 1:
+                    if (grantResults.length > 0) {
+                        for (int result : grantResults) {
+                            if (result != PackageManager.PERMISSION_GRANTED) {
+                            Toast.makeText(this, "必须同意所有权限才能使用本程序", Toast.LENGTH_SHORT).show();
+                            finish();
+                            return;
+                            }
+                        }
+                        requestLocation();
+                    } else {
+                        Toast.makeText(this, "发生未知错误", Toast.LENGTH_SHORT).show();
+                        finish();
+                    }
+                    break;
+                default:
+                    break;
+            }
+        }
+    
+        public class MyLocationListener implements BDLocationListener {
+        
+            @Override
+            public void onReceiveLocation(BDLocation location) {
+                StringBuilder currentPosition = new StringBuilder();
+                currentPosition.append("纬度：").append(location.getLatitude()).append("\n");
+                currentPostion.appen("经线：").append(location.getLongitude()).append("\n");
+                currentPosition.append("定位方式：");
+                if (location.getLocType() == BDLocation.TypeGpsLocation) {
+                    currentPosition.append("GPS");
+                } else if (location.getLocType() == BDLocation.TypeNetWorkLocation) {
+                    currentPosition.append("网络");
+                }
+                positionText.setText(currentPosition);
+            }
+        }
+    
+    }
+    
+### 实时更新当前的位置：
+
+    private void requestLocation() {
+        initLocation();
+        mLocation.start();
+    }
+    
+    private void initLocation() {
+        LocationClientOption option = new LocationClientOption();
+        option.setScanSpan(5000);
+        mLocationClent.setLocOption(option);
+    }
+    
+    @Override
+    protected void onDestroy() {
+        super.onDestroy();
+        mLocationClient.stop();
+    }
+    
+### 选择定位模式
+
+    //选择当前定位模式为传感器模式
+    option.setLocationMode(LocationClentOption.LocationMode.Device_Sensors);
+    
+### 获取看得懂的位置信息
+
+    option.setIsNeedAddress(true);
+    //设置上行代码即可在定位监听中调用如下api
+    location.getCountry();
+    locatin.getProvince();
+    location.getCity();
+    location.getDistrict();
+    location.getStreet();
+    
+## 使用百度地图
+
+### 让地图显示出来
+
+    <com.baidu.mapap.map.MapView
+        android:id="@+id/bmapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true" />
+        
+    private MapView mapView;
+    
+    //onCreate()中
+    SDKInitializer.initialize(getApplicationContext());
+    setContentView(R.layout.activity_main);
+    mapView = (MapView) findViewById(R.id.bmapView);
+    
+    @Override
+    protected void onResume() {
+        super.onResume();
+        mapView.onResume();
+    }
+    
+    @Override
+    protected void onPause() {
+        super.onPause();
+        mapView.onPause();
+    }
+    
+    mapView.onDestroy();
+    
+### 移动到我的位置
+
+    private BaiduMap baiduMap;
+    
+    private boolean isFirstLocate = true;
+    
+    //onCreate()中
+    baiduMap = mapView.getMap;
+    
+    private void navigateTo(BDLocation location) {
+        if (isFirstLocate) {
+            LatLng ll = new LatLng(location.getLatitude(), location.getLongitude());
+            MapStatusUpdate update = MapStatusUpdateFactory.newLatLng(ll);
+            baiduMap.animateMapStatus(update);
+            update = MapStatusUpdateFactory.zoomTo(16f);
+            baiduMap.animateMapStatus(update);
+            isFirstLocate = false;
+        }
+    }
+    
+    //定位监听中
+    if (location.getLocType() == BDLocation.TypeGpsLocation || location.getLocType() == BDLocation.TypeNetWorkLocation) {
+        navigateTo(location);
+    }
+    
+### 让“我”显示在地图上
+
+    //onCreate()中
+    baiduMap.setMyLocationEnabled(true);
+    
+    //navigateTo()中最后
+    MyLocationData.Builder locationBuilder = new MyLocationData.Builder();
+    locationBuilder.latitude(location.getLatitude());
+    locationBuilder.longitude(location.getLongitude());
+    MyLocationData locationData = locationBuilder.build();
+    baiduMap.setMylocationData(locationData);
+    
+    //onDestroy()中
+    baiduMap.setMyLocationEnabled(false);
+    
+## Git时间——版本控制工具的高级用法
+
+### Git分支
+
+    //查看分支
+    git branch
+    //创建分支
+    git branch version1.0
+    //切换分支
+    git checkout version1.0
+    //合并分支
+    git checkout master
+    git merge version1.0
+    //删除分支
+    git branch -D version1.0
+    
+### 与远程版本库协作
+
+    //将代码下载到本地
+    git clone https://github.com/example/test.git
+    //将修改的内容同步到远程版本库上
+    git push origin master
+    //将远程版本库上的修改同步到本地
+    git fetch origin master
+    //查看远程版本修改的内容
+    git diff origin/master
+    //将origin/master分支上的修改合并到主分支上
+    git merge origin/master
+    //pull = fetch + merge
+    git pull origin master
     
