--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -680,7 +680,7 @@ query()方法用于查询数据。最短的方法重载有7个参数，第一个
 
     db.rawQuery("select * from Book", null);
     
-# 四、跨程序共享数据——内容提供器
+# 四、跨程序共享数据——探究内容提供器
 
 ## 运行时权限
 
