--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -490,7 +490,7 @@ Windows系统：打开Git Bash
     git add .
     git commit -m "First commit"
     
-## 三、数据存储全方案——详解持久化技术
+# 三、数据存储全方案——详解持久化技术
 
 ### 将数据存储到文件中
 
@@ -1061,7 +1061,7 @@ Android 6.0以上权限分为普通权限和危险权限。危险权限共9组24
         }
     }
     
-## 六、看看精彩的世界——使用网络技术
+# 六、看看精彩的世界——使用网络技术
 
 ### WebView
 
