--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -1668,3 +1668,126 @@ POST请求：
     //pull = fetch + merge
     git pull origin master
     
+    
+# 九、最佳的UI体验——Material Design实战
+
+## Menu
+
+app:showAsAction指定按钮的显示为止，使用app命名空间同样是为了能够兼容低版本的系统。
+
+- always表示永远显示在Toolbar中，如果屏幕空间不够则不显示。
+- ifRoom表示屏幕空间足够的情况下显示在Toolbar中，不够的话就显示在菜单栏中。
+- never则表示永远显示在菜单当中。
+
+注意：Toolbar中的action按钮只会显示图标，菜单中的action按钮只会显示文字。
+
+## 悬浮按钮和可交互提示
+
+- app:elevation属性给控件指定了一个高度值，高度值越大，投影范围也越大，但是投影效果越淡，高度值越小，投影范围也越小，但是投影效果越淡。
+- Snackbar的make()方法的第一个参数是用来指定Sncakbar是基于哪个View来触发的。
+- 
+### app:layout_scrollFlags属性各个值的作用
+
+- scroll表示当RecyclerView向上滚动的时候，Toolbar会跟着一起向上滚动并重新隐藏。
+- enterAlways表示当RecyclerView向下滚动的时候，Toolbar会跟着一起向下滚动并重新显示。
+- snap表示当Toolbar还没有完全隐藏或显示的时候，会根据当前滚动的距离，自动选择隐藏还是显示。
+
+    //用来协调CoordinatorLayout的子布局的
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    
+## CollapsingToolbarLayout
+
+CollapsingToolbarLayout是不能独立存在的，它在设计的时候就被限定只能作为AppBarLayout的直接子布局来使用。
+
+- app:contentScrim属性用于指定CollapsingToolbarLayout在趋于折叠状态以及折叠之后的背景色。
+- exitUntilCollapsed表示当CollapsingToolbarLayout随着滚动完成后就保留在界面上，不在移出屏幕。
+
+### app:layout_collapseMode属性的各个值的作用
+
+- pin表示在折叠的过程中位置始终保持不变。
+- parallax表示会在折叠的过程中产生一定的错位偏移
+
+    //将锚点设置为AppBarLayout
+    app:layout_anchor="@id/appBar"
+    //定位在AppBarLayout中的位置
+    app:layout_anchorGravity="bottom|end"
+    
+## 可折叠式标题栏
+
+- android:fitsSystemWindows属性指定成true，表示该控件会出现在系统状态栏里。（注意：xml中对应的所有父布局都应该设置这个属性。）
+
+# 十、其它的高级技巧
+
+## Parcelable方式
+
+Paracelable方式的实现原理是将一个完整的对象进行分解，而分解后的每一部分都是Intent所支持的数据类型。
+
+    public class Person implements Parcelable {
+        
+        private String name;
+        
+        private int age;
+        
+        ...
+        
+        @Override
+        public int describeContents() {
+            return 0;
+        }
+        
+        @Override
+        public void writeParcel(Parcel dest, int flags) {
+            dest.writeString(name); 
+            dest.writeInt(age);
+        }
+        
+        public static final Parcelable.Creator<Person> CREATOR = new Parcelable.Creator<Person>() {
+            
+            @Override
+            public Person createFromParcel(Parcel source) {
+                Person person = new Person();
+                person.name = source.readString();
+                person.age = source.readInt();
+                return person;
+            }
+            
+            @Override
+            public Person[] newArray(int size) {
+                return new Person[size];
+            }
+        };
+    }
+    
+## 创建定时任务
+
+### Alarm机制
+
+    public class LongRunningService extends Service {
+        
+        @Override
+        public IBinder onBind(Intent intent) {
+            return null;
+        }
+        
+        @Override
+        public int onStartCommand(Intent intent, int flags, int startId) {
+            new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    //在这里执行具体的逻辑操作
+                }
+            }).start();
+            AlarmManager manager = (AlarmManager) getSystemService(ALARM_SERVICE);
+            int anHour = 60 * 60 * 1000;
+            long triggerAtTime = SystemClock.elapsedRealtime() + anHour;
+            Intent i = new Intent(this, LongRunningService.class);
+            PendingIntent pi = PendingIntent.getService(this, 0, i, 0);
+            manager.set(AlarmManager.ELAPSED_REALTIME_WAKEUP, triggerAtTime, pi);
+            return super.onStartCommand(intent, flags, startId);
+        }
+    }
+    
+对于manager.set()方法的参数的解释：
+
+- ELAPSED_REALTIME
+
